--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Harshit</title>
 </head>
-<link rel="stylesheet" href="/My_Website/css/style.css">
+<link rel="stylesheet" href="My_Website/css/style.css">
 <link rel="icon" href="favicon.ico">
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 
